KFSPTS-19212 Upgrade to 06/25/2020 financials patch (#1040)